--- a/main.html
+++ b/main.html
@@ -4,10 +4,30 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<button id="openModal" class="btn btn-secondary m-3" data-bs-toggle="modal" data-bs-target="#new-modal">Open Modal</button>
+
+	<div class="modal fade" id="new-modal">
+		<div class="modal-dialog modal-dialog-centered">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h2 class="modal-title ">Modal Header</h2>	
+					<button type="submit" class="btn-close " data-bs-dismiss="modal"></button>
+				</div>
+				<div class="modal-body">
+					<p>Modal Body Content</p>
+				</div>
+			</div>
+		</div>
+	</div>
+	
+	
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script type="text/javascript" src="./script.js">
 </script>
 
