--- a/main.html
+++ b/main.html
@@ -12,12 +12,12 @@
 	<!-- the entire body must be written by student -->
 	<button id="openModal" class="btn btn-secondary m-3" data-bs-toggle="modal" data-bs-target="#new-modal">Open Modal</button>
 
-	<div class="modal fade" id="new-modal">
+	<div class="modal fade d-none" id="new-modal">
 		<div class="modal-dialog modal-dialog-centered">
 			<div class="modal-content">
 				<div class="modal-header">
 					<h2 class="modal-title ">Modal Header</h2>	
-					<button type="submit" class="btn-close " data-bs-dismiss="modal"></button>
+					<button type="submit" class="close-modal btn-close " data-bs-dismiss="modal"></button>
 				</div>
 				<div class="modal-body">
 					<p>Modal Body Content</p>
