--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 	<!-- the entire body must be written by student -->
 	<button id="openModal" class="btn btn-secondary m-3" data-bs-toggle="modal" data-bs-target="#new-modal">Open Modal</button>
 
-	<div class="modal fade d-none" id="new-modal">
+	<div class="modal fade" id="new-modal">
 		<div class="modal-dialog modal-dialog-centered">
 			<div class="modal-content">
 				<div class="modal-header">
