--- a/main.html
+++ b/main.html
@@ -10,9 +10,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<button id="openModal" class="btn btn-secondary m-3" data-bs-toggle="modal" data-bs-target="#new-modal">Open Modal</button>
+	<button id="openModal" class="btn btn-secondary m-3 d-none d-sm-block" data-bs-toggle="modal" data-bs-target="#new-modal">Open Modal</button>
 
-	<div class="modal fade d-md-block d-lg-block d-none" id="new-modal">
+	<div class="modal fade" id="new-modal">
 		<div class="modal-dialog modal-dialog-centered">
 			<div class="modal-content">
 				<div class="modal-header">
